--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "planter",
+  "name": "Planter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "bottender": "1.4.4",
-    "csv-parse": "^4.9.0",
-    "random-item": "^3.0.0"
+    "csv-parse": "^4.9.0"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
